--- a/src/Poshley/Poshley.csproj
+++ b/src/Poshley/Poshley.csproj
@@ -5,15 +5,34 @@
     <RootNamespace>Acklann.Poshley</RootNamespace>
     <Product>Poshsielaye</Product>
     <AssemblyVersion>0.1.0</AssemblyVersion>
-    <PackageVersion>0.1.0</PackageVersion>
+    <PackageVersion>0.1.0$(VersionSuffix)</PackageVersion>
     <Description>A useful description.</Description>
     <Authors>Ackara</Authors>
     <Company>Ackara</Company>
-    <PackageTags>command-line parser powershell console</PackageTags>
+    <PackageTags>command-line parser powershell console shell wrapper</PackageTags>
     <Copyright>All Rights Reserved.</Copyright>
     <PackageIconUrl>https://raw.githubusercontent.com/Ackara/Poshsielaye/master/assets/icon.png</PackageIconUrl>
     <PackageProjectUrl>https://github.com/Ackara/Poshsielaye</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/Ackara/Poshsielaye/blob/master/license.txt</PackageLicenseUrl>
     <PackageReleaseNotes>https://github.com/Ackara/Poshsielaye/blob/master/releaseNotes.txt</PackageReleaseNotes>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>bin\Release\netstandard2.0\Acklann.Poshley.xml</DocumentationFile>
+  </PropertyGroup>
+  <ItemGroup>
+    <None Update="Extensions\Extensions.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>Extensions.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Update="Extensions\Extensions.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Extensions.tt</DependentUpon>
+    </Compile>
+  </ItemGroup>
 </Project>
