--- a/tests/Poshley.MSTest/Poshley.MSTest.csproj
+++ b/tests/Poshley.MSTest/Poshley.MSTest.csproj
@@ -54,6 +54,9 @@
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\..\packages\MSTest.TestFramework.1.2.0\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="Shouldly, Version=2.8.3.0, Culture=neutral, PublicKeyToken=6042cbcb05cbc941, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Shouldly.2.8.3\lib\net451\Shouldly.dll</HintPath>
     </Reference>
@@ -68,37 +71,37 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="config.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>config.tt</DependentUpon>
-    </Compile>
+    <Compile Include="Fakes\IFakeCommand.cs" />
+    <Compile Include="Fakes\ImmutableCommand.cs" />
+    <Compile Include="Fakes\MutableCommand.cs" />
+    <Compile Include="Fakes\FakeEnum.cs" />
+    <Compile Include="Fakes\NonDecoratedCommand.cs" />
+    <Compile Include="Fakes\Sex.cs" />
+    <Compile Include="Helper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\ParserTest.cs" />
+    <Compile Include="Tests\CommandInfoTest.cs" />
+    <Compile Include="Tests\ArgumentTest.cs" />
+    <Compile Include="Tests\HelpBuildTest.cs" />
+    <Compile Include="Tests\PackageGeneratorTest.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config">
-      <SubType>Designer</SubType>
-    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Poshsielaye\Poshley.csproj">
+    <ProjectReference Include="..\..\src\Poshley\Poshley.csproj">
       <Project>{c88d43dd-2f99-40ff-881d-2207fb751829}</Project>
       <Name>Poshley</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="TestData\" />
-    <Folder Include="Tests\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="config.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>config.cs</LastGenOutput>
-    </Content>
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="TestData\packageMe.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
